--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 		    <artifactId>nekohtml</artifactId>
 		    <version>1.9.22</version>
 		</dependency>
+		
+		<!--  Gson: Java to Json conversion -->
+	    <dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.8.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
